Created Island North area and first hitbox

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Island.js"></script>
     <script src = "./src/scenes/End.js"></script>
+    <script src = "./src/scenes/IslandNorth.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
