Map implented Alpha (still has bugs)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src = "./src/scenes/Island.js"></script>
     <script src = "./src/scenes/End.js"></script>
     <script src = "./src/scenes/IslandNorth.js"></script>
+    <script src = "./src/scenes/IslandWest.js"></script>
+    <script src = "./src/scenes/IslandEast.js"></script>
+    <script src = "./src/scenes/IslandSouth.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
