Temporary lighthouse scene set up

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src = "./src/scenes/IslandWest.js"></script>
     <script src = "./src/scenes/IslandEast.js"></script>
     <script src = "./src/scenes/IslandSouth.js"></script>
+    <script src = "./src/scenes/Lighthouse.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
