Updated Page assets, implemented inventory on all scenes, clean global variables, implemented everything from Suggestions.txt

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 </head>
 <body>
     <script src = "./lib/phaser.js"></script>
-    <script src = "./src/prefabs/Runner.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
-    <script src = "./src/scenes/Island.js"></script>
+    <script src = "./src/scenes/Instruction.js"></script>
     <script src = "./src/scenes/End.js"></script>
     <script src = "./src/scenes/IslandNorth.js"></script>
     <script src = "./src/scenes/IslandWest.js"></script>
