--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Instruction.js"></script>
-    <script src = "./src/scenes/End.js"></script>
+    <script src = "./src/scenes/Start.js"></script>
     <script src = "./src/scenes/IslandNorth.js"></script>
     <script src = "./src/scenes/IslandWest.js"></script>
     <script src = "./src/scenes/IslandEast.js"></script>
     <script src = "./src/scenes/IslandSouth.js"></script>
-    <script src = "./src/scenes/Lighthouse.js"></script>
+    <script src = "./src/scenes/Transition1.js"></script>
+    <script src = "./src/scenes/End.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
