Puzzle 2 scene set up and start

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script src = "./src/scenes/IslandEast.js"></script>
     <script src = "./src/scenes/IslandSouth.js"></script>
     <script src = "./src/scenes/Transition1.js"></script>
+    <script src = "./src/scenes/CellarNorth.js"></script>
+    <script src = "./src/scenes/CellarWest.js"></script>
+    <script src = "./src/scenes/CellarEast.js"></script>
+    <script src = "./src/scenes/CellarSouth.js"></script>
     <script src = "./src/scenes/End.js"></script>
     <script src = "./src/main.js"></script>
 </body>
