Reimplemented card inventory

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Instruction.js"></script>
     <script src = "./src/scenes/Start.js"></script>
+    <script src = "./src/scenes/InventoryInfo.js"></script>
     <script src = "./src/scenes/IslandNorth.js"></script>
     <script src = "./src/scenes/IslandWest.js"></script>
     <script src = "./src/scenes/IslandEast.js"></script>
