--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Instruction.js"></script>
-    <script src = "./src/scenes/Start.js"></script>
-    <script src = "./src/scenes/InventoryInfo.js"></script>
-    <script src = "./src/scenes/IslandNorth.js"></script>
-    <script src = "./src/scenes/IslandWest.js"></script>
-    <script src = "./src/scenes/IslandEast.js"></script>
-    <script src = "./src/scenes/IslandSouth.js"></script>
-    <script src = "./src/scenes/Transition1.js"></script>
-    <script src = "./src/scenes/CellarNorth.js"></script>
-    <script src = "./src/scenes/CellarWest.js"></script>
-    <script src = "./src/scenes/CellarEast.js"></script>
-    <script src = "./src/scenes/CellarSouth.js"></script>
-    <script src = "./src/scenes/End.js"></script>
+    <script src = "./src/scenes/Spreads/Spread1.js"></script>
+    <script src = "./src/scenes/Inventory.js"></script>
+    <script src = "./src/scenes/Island/IslandNorth.js"></script>
+    <script src = "./src/scenes/Island/IslandWest.js"></script>
+    <script src = "./src/scenes/Island/IslandEast.js"></script>
+    <script src = "./src/scenes/Island/IslandSouth.js"></script>
+    <script src = "./src/scenes/Spreads/Spread2.js"></script>
+    <script src = "./src/scenes/Cellar/CellarNorth.js"></script>
+    <script src = "./src/scenes/Cellar/CellarWest.js"></script>
+    <script src = "./src/scenes/Cellar/CellarEast.js"></script>
+    <script src = "./src/scenes/Cellar/CellarSouth.js"></script>
+    <script src = "./src/scenes/Spreads/Spread3.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
