--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <script src = "./src/scenes/Cellar/CellarEast.js"></script>
     <script src = "./src/scenes/Cellar/CellarSouth.js"></script>
     <script src = "./src/scenes/Spreads/Spread3.js"></script>
+    <script src = "./src/scenes/Main/MainNorth.js"></script>
+    <script src = "./src/scenes/Main/MainWest.js"></script>
+    <script src = "./src/scenes/Main/MainEast.js"></script>
+    <script src = "./src/scenes/Main/MainSouth.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
