--- a/index.html
+++ b/index.html
@@ -16,22 +16,37 @@
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Instruction.js"></script>
+    
     <script src = "./src/scenes/Spreads/Spread1.js"></script>
     <script src = "./src/scenes/Inventory.js"></script>
     <script src = "./src/scenes/Island/IslandNorth.js"></script>
     <script src = "./src/scenes/Island/IslandWest.js"></script>
     <script src = "./src/scenes/Island/IslandEast.js"></script>
     <script src = "./src/scenes/Island/IslandSouth.js"></script>
+
     <script src = "./src/scenes/Spreads/Spread2.js"></script>
     <script src = "./src/scenes/Cellar/CellarNorth.js"></script>
     <script src = "./src/scenes/Cellar/CellarWest.js"></script>
     <script src = "./src/scenes/Cellar/CellarEast.js"></script>
     <script src = "./src/scenes/Cellar/CellarSouth.js"></script>
+
     <script src = "./src/scenes/Spreads/Spread3.js"></script>
     <script src = "./src/scenes/Main/MainNorth.js"></script>
     <script src = "./src/scenes/Main/MainWest.js"></script>
     <script src = "./src/scenes/Main/MainEast.js"></script>
     <script src = "./src/scenes/Main/MainSouth.js"></script>
+
+    <script src = "./src/scenes/Spreads/Spread4.js"></script>
+    <script src = "./src/scenes/Lookout/LookoutNorth.js"></script>
+    <script src = "./src/scenes/Lookout/LookoutWest.js"></script>
+    <script src = "./src/scenes/Lookout/LookoutEast.js"></script>
+    <script src = "./src/scenes/Lookout/LookoutSouth.js"></script>
+
+    <script src = "./src/scenes/Spreads/Spread5.js"></script>
+    <script src = "./src/scenes/Ritual/RitualNorth.js"></script>
+    <script src = "./src/scenes/Ritual/RitualWest.js"></script>
+    <script src = "./src/scenes/Ritual/RitualEast.js"></script>
+    <script src = "./src/scenes/Ritual/RitualSouth.js"></script>
     <script src = "./src/main.js"></script>
 </body>
 </html>
