7-Page Inventory for puzzle 5

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src = "./src/scenes/Lookout/LookoutSouth.js"></script>
 
     <script src = "./src/scenes/Spreads/Spread5.js"></script>
+    <script src = "./src/scenes/Inventory7.js"></script>
     <script src = "./src/scenes/Ritual/RitualNorth.js"></script>
     <script src = "./src/scenes/Ritual/RitualWest.js"></script>
     <script src = "./src/scenes/Ritual/RitualEast.js"></script>
