scale scene set up

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src = "./src/scenes/Spreads/Spread4.js"></script>
     <script src = "./src/scenes/Lookout/LookoutNorth.js"></script>
     <script src = "./src/scenes/Lookout/LookoutWest.js"></script>
+    <script src = "./src/scenes/Lookout/Scales.js"></script>
     <script src = "./src/scenes/Lookout/LookoutEast.js"></script>
     <script src = "./src/scenes/Lookout/LookoutSouth.js"></script>
 
