Loading room setup

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <script src = "./src/scenes/Lookout/LookoutEast.js"></script>
     <script src = "./src/scenes/Lookout/LookoutSouth.js"></script>
 
+
+    <script src = "./src/scenes/Loading/LoadingNorth.js"></script>
+    <script src = "./src/scenes/Loading/LoadingSouth.js"></script>
+
     <script src = "./src/scenes/Spreads/Spread5.js"></script>
     <script src = "./src/scenes/Inventory7.js"></script>
     <script src = "./src/scenes/Ritual/RitualNorth.js"></script>
