Loading room finished

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tower of Tarot</title>
+    <title>Lighthouse 16</title>
     
     <style>
         body { 
@@ -42,7 +42,6 @@
     <script src = "./src/scenes/Lookout/LookoutWest.js"></script>
     <script src = "./src/scenes/Lookout/LookoutEast.js"></script>
     <script src = "./src/scenes/Lookout/LookoutSouth.js"></script>
-
 
     <script src = "./src/scenes/Loading/LoadingNorth.js"></script>
     <script src = "./src/scenes/Loading/LoadingSouth.js"></script>
