Seperated clock, moves with a/d

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src = "./src/scenes/Main/MainWest.js"></script>
     <script src = "./src/scenes/Main/MainEast.js"></script>
     <script src = "./src/scenes/Main/MainSouth.js"></script>
+    <script src = "./src/scenes/Main/Clock.js"></script>
 
     <script src = "./src/scenes/Spreads/Spread4.js"></script>
     <script src = "./src/scenes/Lookout/Scales.js"></script>
