Ritual (until closet)

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <script src = "./src/scenes/Spreads/Spread5.js"></script>
     <script src = "./src/scenes/Inventory7.js"></script>
     <script src = "./src/scenes/Ritual/RitualNorth.js"></script>
+    <script src = "./src/scenes/Ritual/Pentagram.js"></script>
+    <script src = "./src/scenes/Ritual/Bookshelf.js"></script>
     <script src = "./src/scenes/Ritual/RitualWest.js"></script>
     <script src = "./src/scenes/Ritual/RitualEast.js"></script>
     <script src = "./src/scenes/Ritual/RitualSouth.js"></script>
