Fix scene pause movement bug

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <script src = "./src/scenes/Loading/LoadingNorth.js"></script>
     <script src = "./src/scenes/Loading/LoadingSouth.js"></script>
+    <script src = "./src/scenes/Ritual/Closet.js"></script>
 
     <script src = "./src/scenes/Spreads/Spread5.js"></script>
     <script src = "./src/scenes/Inventory7.js"></script>
