Cabinet scene set up

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src = "./src/scenes/Ritual/Bookshelf.js"></script>
     <script src = "./src/scenes/Ritual/RitualWest.js"></script>
     <script src = "./src/scenes/Ritual/RitualEast.js"></script>
+    <script src = "./src/scenes/Ritual/Cabinet.js"></script>
     <script src = "./src/scenes/Ritual/RitualSouth.js"></script>
     <script src = "./src/main.js"></script>
 </body>
