End and Clown room setup

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     <script src = "./src/scenes/Ritual/RitualEast.js"></script>
     <script src = "./src/scenes/Ritual/Cabinet.js"></script>
     <script src = "./src/scenes/Ritual/RitualSouth.js"></script>
+
+    <script src = "./src/scenes/End/Lose.js"></script>
+    <script src = "./src/scenes/End/Win.js"></script>
+
+    <script src = "./src/scenes/Clown/ClownNorth.js"></script>
+    <script src = "./src/scenes/Clown/ClownWest.js"></script>
+    <script src = "./src/scenes/Clown/ClownEast.js"></script>
+    <script src = "./src/scenes/Clown/ClownSouth.js"></script>
+
     <script src = "./src/main.js"></script>
 </body>
 </html>
