--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
+    <script src = "./src/scenes/Intro.js"></script>
     <script src = "./src/scenes/Instruction.js"></script>
     
     <script src = "./src/scenes/Spreads/Spread1.js"></script>
