end sequences done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script src = "./src/scenes/Ritual/RitualEast.js"></script>
     <script src = "./src/scenes/Ritual/Cabinet.js"></script>
     <script src = "./src/scenes/Ritual/RitualSouth.js"></script>
+    <script src = "./src/scenes/Spreads/Spread6.js"></script>
 
     <script src = "./src/scenes/End/Lose.js"></script>
     <script src = "./src/scenes/End/Win.js"></script>
