playable build -- took out password stuff for now

--- a/index.html
+++ b/index.html
@@ -71,5 +71,6 @@
     <script src = "./src/scenes/Clown/ClownSouth.js"></script>
 
     <script src = "./src/main.js"></script>
+    <footer><div id=Password></div></footer>
 </body>
 </html>
