--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <script src = "./src/scenes/End/Lose.js"></script>
     <script src = "./src/scenes/End/Win.js"></script>
 
-    <script src = "./src/scenes/Clown/Password.js"></script>    
+    <script src = "./src/scenes/Clown/Password.js"></script> 
     <script src = "./src/scenes/Clown/ClownNorth.js"></script>
     <script src = "./src/scenes/Clown/ClownWest.js"></script>
     <script src = "./src/scenes/Clown/ClownEast.js"></script>
     <script src = "./src/scenes/Clown/ClownSouth.js"></script>
 
     <script src = "./src/main.js"></script>
-    <footer><div id=Password></div></footer>
+    <footer><div id=div></div></footer>
 </body>
 </html>
