--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src = "./src/scenes/End/Win.js"></script>
 
     <script src = "./src/scenes/Clown/Password.js"></script> 
+    <script src = "./src/scenes/Clown/Clownery.js"></script> 
     <script src = "./src/scenes/Clown/ClownNorth.js"></script>
     <script src = "./src/scenes/Clown/ClownWest.js"></script>
     <script src = "./src/scenes/Clown/ClownEast.js"></script>
